fix map button spacing scss

--- a/src/app/components/map/_map.scss
+++ b/src/app/components/map/_map.scss
@@ -34,6 +34,11 @@
             // background: inherit;
         }
     }
+
+    .mapViewBtn {
+        position: absolute;
+        right: -22px;
+    }
 }
 
 .filter {
